[package]
name = "twitter-sibyl-system"
version = "0.1.0"
authors = ["Sam De Roeck <sadroeck@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
log = "0.4"
futures = "0.1"
num_cpus = "1.10"
sentiment = "0.1"
simple_logger = "1.3"
tokio = "0.1"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
twitter-stream = "0.9"
